--- a/homework-1/pom.xml
+++ b/homework-1/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.shtanko</groupId>
-    <artifactId>quiz</artifactId>
+    <artifactId>quiz-spring-xml-based-configuration</artifactId>
     <version>0.0.0.1</version>
     <packaging>jar</packaging>
 
