Complete homework 2: spring java based configuration quiz

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.shtanko</groupId>
+    <version>0.0.0.1</version>
     <artifactId>2020-11-otus-spring-shtanko</artifactId>
+    <packaging>pom</packaging>
 
     <properties>
     </properties>
