--- a/homework-2/pom.xml
+++ b/homework-2/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.shtanko</groupId>
-    <artifactId>quiz</artifactId>
+    <artifactId>quiz-spring-java-based-configuration</artifactId>
     <version>0.0.0.1</version>
     <packaging>jar</packaging>
 
@@ -21,6 +21,7 @@
         <mockito-core.version>3.6.28</mockito-core.version>
         <spring-boot-starter-test.version>2.3.5.RELEASE</spring-boot-starter-test.version>
         <spring-boot-starter.version>2.3.5.RELEASE</spring-boot-starter.version>
+        <hamcrest.version>1.3</hamcrest.version>
 
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
@@ -45,12 +46,6 @@
             <version>${spring-boot-starter.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring-boot-starter-test.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito-core.version}</version>
@@ -60,6 +55,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -114,7 +115,5 @@
             </plugin>
         </plugins>
     </build>
-
-
 
 </project>
