--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
     <modules>
         <module>homework-1</module>
         <module>homework-2</module>
+        <module>homework-3</module>
     </modules>
 </project>
