[HOMEWORK-3] Add maven-enforcer-plugin to pom.xml

--- a/homework-3/pom.xml
+++ b/homework-3/pom.xml
@@ -12,6 +12,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<apache-commons.version>1.5</apache-commons.version>
+		<minimal.maven.version>3.3.9</minimal.maven.version>
 	</properties>
 
 	<parent>
@@ -45,7 +46,29 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>${maven-enforcer-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<dependencyConvergence/>
+								<requireMavenVersion>
+									<version>${minimal.maven.version}</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+
 	</build>
 
 </project>
