--- a/homework-3/pom.xml
+++ b/homework-3/pom.xml
@@ -12,6 +12,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<apache-commons.version>1.5</apache-commons.version>
+		<apache-commons-io.version>2.8.0</apache-commons-io.version>
 		<minimal.maven.version>3.3.9</minimal.maven.version>
 	</properties>
 
@@ -38,7 +39,17 @@
             <version>${apache-commons.version}</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${apache-commons-io.version}</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
