--- a/homework-3/pom.xml
+++ b/homework-3/pom.xml
@@ -40,16 +40,11 @@
             <scope>compile</scope>
         </dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>${apache-commons-io.version}</version>
+			<version>2.8.0</version>
 		</dependency>
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
