Homework 5: Done. Ready for the review (1).

--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,8 @@
     <modules>
         <module>homework-1</module>
         <module>homework-2</module>
+
+
+        <module>homework-5</module>
     </modules>
 </project>
