--- a/homework-6/src/main/resources/application.yaml
+++ b/homework-6/src/main/resources/application.yaml
@@ -7,6 +7,15 @@ spring:
     schema: schema.sql
     data: data.sql
 
+  jpa:
+    generate-ddl: false
+
+    properties:
+      hibernate:
+        format_sql: true
+
+    show-sql: false
+
   h2:
     console:
       path: /h2-console
