--- a/homework-6/pom.xml
+++ b/homework-6/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
