[General] Add homework-3 to master .pom file.

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modules>
         <module>homework-1</module>
         <module>homework-2</module>
-
+        <module>homework-3</module>
 
         <module>homework-5</module>
         <module>homework-6</module>
