--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
         <module>homework-5</module>
         <module>homework-6</module>
-
+        <module>homework-7</module>
 
 
     </modules>
