--- a/homework-7/pom.xml
+++ b/homework-7/pom.xml
@@ -102,8 +102,18 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<includes>
+						<include>Sample.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<repositories>
